add_library(LEARNGL_PRACTICE_HELLOTRIANGLE_3 STATIC "Practice.cpp")
set_target_properties(LEARNGL_PRACTICE_HELLOTRIANGLE_3 PROPERTIES LINKER_LANGUAGE CXX)

target_include_directories(LEARNGL_PRACTICE_HELLOTRIANGLE_3
    PRIVATE ${GLAD_INC}
    PRIVATE ${GLFW_INC}
)
target_link_libraries(LEARNGL_PRACTICE_HELLOTRIANGLE_3
    PRIVATE ${LIB_GLAD}
    PRIVATE ${LIB_GLFW}
    PRIVATE TEMPLATE_BASIC
)
