file(GLOB CPP_FILES *.cpp)

add_library(PRACTICE_LEARNGL_CH01 STATIC ${CPP_FILES})
set_target_properties(PRACTICE_LEARNGL_CH01 PROPERTIES LINKER_LANGUAGE CXX)

target_include_directories(PRACTICE_LEARNGL_CH01
    PRIVATE ${GLAD_INC}
    PRIVATE ${GLFW_INC}
)
target_link_libraries(PRACTICE_LEARNGL_CH01
    PRIVATE ${LIB_GLAD}
    PRIVATE ${LIB_GLFW}
    PRIVATE GL_TEMPLATE
)
