file(GLOB CPP_FILES *.cpp)

add_library(GLLEARNING_CH02 STATIC ${CPP_FILES})
set_target_properties(GLLEARNING_CH02 PROPERTIES LINKER_LANGUAGE CXX)

target_include_directories(GLLEARNING_CH02
    PRIVATE ${GLAD_INC}
    PRIVATE ${GLFW_INC}
)
target_link_libraries(GLLEARNING_CH02
    PRIVATE ${LIB_GLAD}
    PRIVATE ${LIB_GLFW}
    PRIVATE GL_TEMPLATE
)